--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Selix Tech - L'innovation digitale au service de votre croissance</title>
+    <meta property="og:title" content="Selix Tech - L'innovation digitale au service de votre croissance" />
+<meta property="og:description" content="Selix Tech accompagne votre entreprise avec des solutions digitales innovantes pour booster votre croissance." />
+<meta property="og:image" content="/logo.png.png" />
+<meta property="og:url" content="https://brahima-dev-portfolio.vercel.app/" />
+<meta property="og:type" content="website" />
+
+<!-- Balises Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Selix Tech - L'innovation digitale au service de votre croissance" />
+<meta name="twitter:description" content="Selix Tech accompagne votre entreprise avec des solutions digitales innovantes pour booster votre croissance." />
+<meta name="twitter:image" content="/logo.png.png" />
+
+<!-- Balises SEO classiques -->
+<meta name="description" content="Selix Tech accompagne votre entreprise avec des solutions digitales innovantes pour booster votre croissance." />
+<meta name="author" content="Selix Tech" />
+
+<title>Selix Tech - L'innovation digitale au service de votre croissance</title>
+<link rel="icon" type="image/x-icon" href="/logo.png" />
+
     <style>
         * {
             margin: 0;
