--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@
             <div class="cta-content">
                 <h2>Prêt à accélérer votre transformation digitale ?</h2>
                 <p>Contactez-nous dès aujourd'hui pour un accompagnement sur mesure</p>
-                <a href="mailto:contact@selix-tech.com" class="cta-button">Commencer maintenant</a>
+                <a href="mailto:developer.selix.tech@gmail.com" class="cta-button">Commencer maintenant</a>
             </div>
         </div>
     </section>
